# odjitter

./: .gitignore  Cargo.toml  DESCRIPTION  README.Rmd  README.md  README.tex  benchmark.Rmd  benchmark.md  edinburgh_region.geojson  foss4g2022.Rmd  foss4g2022.md  getdata.R  main.R  main.py  odjitter-paper.R  odjitter-paper.sh  references.bib  setup.R  test.Rmd  test.qmd
.github/workflows/: render-rmarkdown.yaml
figures/: od-top-3-zones-test.xcf  od-top-3-zones.xcf
odjitter/: pyproject.toml
odjitter/odjitter/: main.py
odjitter/src/: main.rs
src/: lib.rs  main.rs
tests/: test_odjitter.py
