[tool.poetry]
name = "odjitter"
version = "0.1.0"
description = ""
authors = ["Dustin Carlino <dabreegster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geojson = "^2.5.0"
Shapely = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
